<resources>
  <string name="app_name">AroioRC</string>

  <string name="information">Information</string>
  <string name="information_body">Hier werden alle Geräte aufgelistet, die mit dem AroioOS laufen.</string>
  <string name="accessible_devices">Erreichbare Aroios</string>


  <string name="login">Anmelden</string>
  <string name="login_body">Bitte melden Sie sich mit dem Benutzernamen und Passwort an.</string>
  <string name="username">Benutzername</string>
  <string name="password">Passwort</string>
  <string name="cancel">Abbrechen</string>



  <string name="detail_config_overline_network">Netzwerk</string>
  <string name="detail_config_wlan">WLAN</string>
  <string name="detail_config_automatic_config">Automatische Konfiguration</string>
  <string name="detail_config_hostname">Hostname</string>
  <string name="detail_config_ip_address">IP-Adresse</string>
  <string name="detail_config_subnet">Subnetzmaske</string>
  <string name="detail_config_gateway">Gateway</string>
  <string name="detail_config_overline_webinterface">Webinterface</string>
  <string name="detail_config_overline_hardware_platform">Hardware Platform</string>
  <string name="detail_config_radio_aroiosu">AroioSU</string>
  <string name="detail_config_radio_aroioos">AroioOS</string>
  <string name="detail_config_radio_aroioex">AroioEX</string>
  <string name="detail_config_radio_aroiolt">AroioLT</string>
  <string name="detail_system_overline_systeminformation">Systeminformationen</string>
  <string name="detail_system_name">Name</string>
  <string name="detail_system_running_since">Läuft seit</string>
  <string name="detail_system_mac_address_cable">Mac-Adresse (kabelgebunden)</string>
  <string name="detail_system_mac_address_wlan">Mac-Adresse (WLAN)</string>
  <string name="detail_system_ip_address_wlan">IP-Adresse (WLAN)</string>
  <string name="detail_system_ip_address_cable">IP-Adresse (kabelgebunden)</string>
  <string name="detail_system_squeezeserver">Squeezeserver</string>
  <string name="detail_system_overline_update">Update</string>
  <string name="detail_system_search_update">Suche Update</string>
  <string name="detail_system_beta_version_search">Nach Beta-Version suchen</string>
	<string name="list_aroio_no_devices_available">No devices available in your network.</string>
</resources>
