<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
      style="@style/TextAppearance.Aroio.Headline6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatTextView
      style="@style/TextAppearance.Aroio.Subtitle1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/login_body" />

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:hint="@string/username"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:hint="@string/password"
        android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/cancel_button"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/cancel" />

  </LinearLayout>

</ScrollView>
