<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Network overline -->
    <androidx.appcompat.widget.AppCompatTextView
      style="@style/TextAppearance.Aroio.Overline"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="24dp"
      android:paddingEnd="16dp"
      android:text="@string/detail_config_overline_network" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/black_200" />

    <!-- WLAN toggle -->
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingEnd="0dp">

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wlan_textView"
        style="@style/TextAppearance.Aroio.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_config_wlan"
        app:layout_constraintBottom_toBottomOf="@id/switch_wlan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/switch_wlan" />

      <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_wlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_200"
        app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Auto config toggle -->
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingEnd="0dp">

      <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.Aroio.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_config_automatic_config"
        app:layout_constraintBottom_toBottomOf="@id/switch_auto_config"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/switch_auto_config" />

      <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_auto_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_200"
        app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Hostname EditText -->
    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="16dp">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/detail_config_hostname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_config_hostname"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- IP Address EditText -->
    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/detail_config_ip_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_config_ip_address"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Subnet EditText -->
    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/detail_config_subnet_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_config_subnet"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Gateway EditText -->
    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/detail_config_gateway_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_config_gateway"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Webinterface overline -->
    <androidx.appcompat.widget.AppCompatTextView
      style="@style/TextAppearance.Aroio.Overline"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="24dp"
      android:paddingEnd="16dp"
      android:text="@string/detail_config_overline_webinterface" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/black_200" />

    <!-- Webinterface EditText -->
    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/detail_config_webinterface_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_config_gateway"
        android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Hardware Platform overline -->
    <androidx.appcompat.widget.AppCompatTextView
      style="@style/TextAppearance.Aroio.Overline"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="24dp"
      android:paddingEnd="16dp"
      android:text="@string/detail_config_overline_hardware_platform" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/black_200" />

    <!-- Radio selection -->

    <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      android:checkedButton="@id/detail_config_platform_aroioos"
      android:divider="?android:attr/dividerHorizontal"
      android:showDividers="middle">
      
      <RadioButton
        android:id="@+id/detail_config_platform_aroiosu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_config_radio_aroiosu"/>

      <RadioButton
        android:id="@+id/detail_config_platform_aroioos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_config_radio_aroioos"/>

      <RadioButton
        android:id="@+id/detail_config_platform_aroioex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_config_radio_aroioex"/>

      <RadioButton
        android:id="@+id/detail_config_platform_aroiolt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_config_radio_aroiolt"/>

    </RadioGroup>


  </LinearLayout>

</ScrollView>