<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
    android:id="@+id/start_cardview"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

      <TextView
        style="@style/TextAppearance.Aroio.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information" />

      <TextView
        style="@style/TextAppearance.Aroio.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/information_body" />

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <TextView
    android:id="@+id/start_overline"
    style="@style/TextAppearance.Aroio.Overline"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/accessible_devices"
    app:layout_constraintEnd_toEndOf="@id/start_cardview"
    app:layout_constraintStart_toStartOf="@id/start_cardview"
    app:layout_constraintTop_toBottomOf="@+id/start_cardview" />

  <View
    android:id="@+id/divider"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/black_200"
    app:layout_constraintTop_toBottomOf="@id/start_overline" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/start_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>